--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,12 @@ jobs:
     - name: Install gem
       run: |
         gem install rusty_hello.gem
-    - name: Test gem
+    - name: Check if there are different params
       run: |
-        ruby -rffi -e 'puts("FFI Platform Suffix: #{::FFI::Platform::LIBSUFFIX}")'
-        ruby -rrusty_hello -e 'puts("Test: #{RustyHello[7]}")'
+        ruby --help
+    - name: Test FFI Platform
+      run: |
+        ruby -rrubygems -e "require 'ffi'; puts(\"FFI Platform Suffix: #{::FFI::Platform::LIBSUFFIX}\")"
+    - name: Test Gem
+      run: |
+        ruby -rrubygems -e "require 'rusty_hello'; puts(\"Test: #{RustyHello[7]}\")"
