--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,6 +83,7 @@ jobs:
 
     - name: Pull compiled libraries
       uses: actions/download-artifact@v2
+      with:
         path: lib/rusty_hello/
 
     - name: Default task
