--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,10 @@ jobs:
         include:
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
+            ext: so
           - target: x86_64-apple-darwin
             os: macos-latest
+            ext: dylib
           - target: x86_64-pc-windows-msvc
             os: windows-latest
 
@@ -59,14 +61,15 @@ jobs:
           cargo build --release --target ${{ matrix.target }}
 
       - name: Check contents
+        if: matrix.os == 'windows-latest'
         run: |
-          ls -lh target/${{ matrix.target }}/release/
+          ls target/${{ matrix.target }}/release/  | Sort-Object -Property LastWriteTime
 
       - uses: actions/upload-artifact@v2
         if: false
         with:
           name: rusty_hello-rs-${{ matrix.os }}
-          path: target/${{ matrix.target }}/release/librusty_hello.*
+          path: target/${{ matrix.target }}/release/librusty_hello.${{ matrix.ext }}
 
   build:
     runs-on: ubuntu-20.04
